--- a/css/main.css
+++ b/css/main.css
@@ -2930,10 +2930,6 @@ footer a{
   float:left;
 }
 
-.main-nav-mobile a{
-  float:left;
-}
-
 .main-nav-mobile .menu{
   float:right;
   cursor: pointer;
@@ -2950,20 +2946,12 @@ footer a{
   margin: 6px 0;
   transition: 0.4s;
 }
-/*
-.main-nav-mobile .menu.menu-light .bar1,
-.main-nav-mobile .menu.menu-light .bar2,
-.main-nav-mobile .menu.menu-light .bar3{
-  background-color: #000;
-}
-*/
+
 .main-nav-mobile.dark-nav .bar1,
 .main-nav-mobile.dark-nav .bar2,
 .main-nav-mobile.dark-nav .bar3{
   background-color: #fff;
 }
-
-
 
 .change .bar1 {
   -webkit-transform: rotate(-45deg) translate(-9px, 6px);
@@ -3094,7 +3082,7 @@ footer a{
     padding:50px 0;
   }
   .homepage.section-2{
-    padding:80px 0;
+    padding:30px 0;
   }
   .homepage.section-4{
     padding-top:0;
@@ -3111,8 +3099,11 @@ footer a{
     width: calc(100% - 20px);
     display: block;
   }
-  .video-banner-wrap iframe{
+  .video-banner-wrap video{
     height:200px;
+  }
+  .homepage.section-2 .video-banner-wrap{
+    padding-bottom:80px;
   }
   .homepage.section-2 .spacer{
     padding-top:60px;
