--- a/css/main.css
+++ b/css/main.css
@@ -1821,21 +1821,24 @@ p{
   font-family: 'Josefin Slab', serif;
   font-weight: 100;
 }
-#slide-0 {
-  background-image: url(../img/bg-01.jpg);
-  background-size: cover;
-  background-position: 50% 50%;
+
+.fullscreen-bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
 }
-#slide-1 {
-  background-image: url(../img/bg-01.jpg);
-  background-size: cover;
-  background-position: 50% 50%;
+
+.fullscreen-bg__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
 }
-#slide-2 {
-  background-image: url(../img/bg-01.jpg);
-  background-size: cover;
-  background-position: 50% 50%;
-}
+
 .slide:before {
   content: "";
 }
