--- a/css/main.css
+++ b/css/main.css
@@ -1836,7 +1836,9 @@ p{
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .slide:before {
