--- a/css/main.css
+++ b/css/main.css
@@ -3441,11 +3441,17 @@ footer a{
   .newsletter .btnball span{
     display:none;
   }
+  .newsletter-mobile .btnball span{
+    display:none;
+  }
 }
 
 @media (max-width: 576px) {
   h1 br, h2 br, h3 br, h4 br{
     display:none;
+  }
+  .newsletter-mobile .btnball span{
+    display:block;
   }
   .industry-banner{
     min-height:240px;
